fixed styling issue for confirmation forms on mobile displays

--- a/public/stylesheets/my_shopping_list.css
+++ b/public/stylesheets/my_shopping_list.css
@@ -238,21 +238,21 @@ div#archive-controls {
 
 div#archive-controls a {
   margin: 5px 20px;
-  height: 29px;
+  padding: 10px;
+  width: 70px;
+  height: 39px;
   background-color: var(--primary);
-  width: 65px;
   display: inline-block;
   border: none;
   border-radius: 7px;
   box-sizing: border-box;
-  padding: 5px 5px 5px 8px;
   text-decoration: none;
 }
 
 div#archive-controls a ~ a {
   background-color: inherit;
-  width: 70px;
-  padding: 5px;
+  width: fit-content;
+  padding: 10px;
   border: solid var(--secondary);
 }
 
